--- a/maquette/style.css
+++ b/maquette/style.css
@@ -12,10 +12,6 @@ body{
   font-family: "Levenim MT";
   color: white;
   background-color: black;
-/*  background-image: url(./cote.svgz);
-  background-repeat: no-repeat;
-  background-position: right top;
-  background-size: 25%;*/
   }
 .decoration-right{
   background-color: transparent;
@@ -23,9 +19,26 @@ body{
   right: 0;
   top: 0;
   width: 25%;
+  z-index: 10;
+  pointer-events: none;
 }
 .white-back{
   background-color: white;
+}
+.graphiti{
+  background-image: url('./texture-graphiti.svgz');
+  background-repeat:  no-repeat;
+  background-size: contain;
+  z-index: 9;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-position-x: 54px;
+  pointer-events: none;
+}
+.content.container{
+  z-index: 8;
+  position: relative;
 }
 .logo img{
   height: 17em;
@@ -75,4 +88,32 @@ header .title-container{
   font-size: 1.7em;
   text-shadow: none;
   line-height: 1.7em;
+}
+.content-margin {
+  margin-top: 41%;
+}
+.big-box-block{
+  margin-top: 10%;
+  background: black;
+  color: white;
+  padding: 2em;
+  border-radius: 6px;
+  text-align: center;
+}
+.big-box-block label{
+  font-size: 1.7em;
+}
+.form-top{
+  text-align: right;
+  clear: both;
+  margin-bottom: 2em;
+  margin-top: 1em;
+}
+select{
+  background-color: black;
+  color: white;
+  border: solid 2px;
+  font-family: Levenim MT;
+  font-size: 1.1em;
+  font-weight: bold;
 }
